kubernetes/apps/auth/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - stg-auth.piny940.com
      secretName: cluster-tls
  rules:
    - host: stg-auth.piny940.com
      http:
        paths:
          - path: /api/v1(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-frontend
                port:
                  number: 3000
